--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                 <img src="https://raw.githubusercontent.com/ment-ai6/001/main/free%20man2.webp" alt="自由な時間" class="final-image">
                 <div class="details-link">
                     <a href="https://example.com/details" target="_blank">詳細は準備中となります</a>
-                    <a href="https://forms.gle/wu7maHqUzr5YWX7G9" target="_blank">応募はこちらから</a>
+                    <a href="https://forms.gle/WhRV68HyiqhvooTw7" target="_blank">応募はこちらから</a>
                 </div>
             </section>
             
