--- a/index.html
+++ b/index.html
@@ -436,8 +436,8 @@
             text-decoration: underline;
         }
         .final-image {
-            max-width: 80%;
-            max-height: 60vh;
+            max-width: 100%;
+            height: 256px;
         }
     </style>
 </head>
@@ -673,8 +673,8 @@
                 <h2>あなたにとって自由な時間を</h2>
                 <img src="https://raw.githubusercontent.com/ment-ai6/001/main/free%20man2.webp" alt="自由な時間" class="final-image">
                 <div class="details-link">
-                    <a href="https://example.com/details" target="_blank">詳細は準備中となります</a><br>
-                    <a href="https://forms.gle/WhRV68HyiqhvooTw7" target="_blank">応募はこちらから</a>
+                    <a href="https://example.com/details" target="_blank">✅詳細は準備中</a><br>
+                    <a href="https://forms.gle/WhRV68HyiqhvooTw7" target="_blank">✉応募はこちら</a>
                 </div>
             </section>
             
