--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
             font-size: 0.9em;
         }
         .fee-table {
-            width: 45%;
-            font-size: 0.9em;
+            width: 30%;
+            font-size: 0.5em;
         }
         .fee-table table {
             width: 80%;
@@ -674,7 +674,7 @@
                 <img src="https://raw.githubusercontent.com/ment-ai6/001/main/free%20man2.webp" alt="自由な時間" class="final-image">
                 <div class="details-link">
                     <a href="https://example.com/details" target="_blank">✅詳細は準備中</a><br>
-                    <a href="https://forms.gle/WhRV68HyiqhvooTw7" target="_blank">✉応募はこちら</a>
+                    <a href="https://forms.gle/WhRV68HyiqhvooTw7" target="_blank">✉応募はこちらから</a>
                 </div>
             </section>
             
