--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                 <h2>あなたにとって自由な時間を</h2>
                 <img src="https://raw.githubusercontent.com/ment-ai6/001/main/free%20man2.webp" alt="自由な時間" class="final-image">
                 <div class="details-link">
-                    <a href="https://example.com/details" target="_blank">✅詳細は準備中</a><br>
+                    <a href="https://docs.google.com/document/d/1qZT8V4SxTd1c5HQN_qBdaXo7otAp_NJr5dg55sADA4U/edit?usp=sharing"_blank">✅詳細はこちら</a><br>
                     <a href="https://forms.gle/WhRV68HyiqhvooTw7" target="_blank">✉応募はこちらから</a>
                 </div>
             </section>
